added basic outline

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    Hello
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:400,700"
+    />
+  </head>
+  <body>
+    <div class="heading">
+      <div id="name_heading">MRUNAL ATHALEY</div>
+      <div id="description">Sophomore at Rensselaer Polytechnic Institute</div>
+      <div id="description_majors">Dual B.S. Computer Science and Information Technology and Web Science</div>
+    </div>
+    <div class="links">
+        <a href="">LinkedIn</a>
+        <a href="">GitHub</a>
+        <a href="">Resume</a>
+        <a href="">Email</a>
+    </div>
+    <div class="buttons">
+        <div class="div_card" id="to_aboutme">ABOUT ME</div>
+        <div class="div_card" id="to_education">EDUCATION</div>
+        <div class="div_card" id="to_experience">EXPERIENCES</div>
+        <div class="div_card" id="to_skills">SKILLS</div>
+        <div class="div_card" id="to_awards">AWARDS</div>
+    </div>
+  </body>
 </html>
