--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mrunal Athaley</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -11,23 +11,36 @@
     />
   </head>
   <body>
-    <div class="heading">
-      <div id="name_heading">MRUNAL ATHALEY</div>
-      <div id="description">Sophomore at Rensselaer Polytechnic Institute</div>
-      <div id="description_majors">Dual B.S. Computer Science and Information Technology and Web Science</div>
-    </div>
-    <div class="links">
-        <a href="">LinkedIn</a>
-        <a href="">GitHub</a>
-        <a href="">Resume</a>
-        <a href="">Email</a>
-    </div>
-    <div class="buttons">
-        <div class="div_card" id="to_aboutme">ABOUT ME</div>
+    <div class="container">
+      <section class="about">
+        <div class="heading">
+          <h1 id="name_heading">MRUNAL ATHALEY</h1>
+          Sophomore at Rensselaer Polytechnic Institute<br>
+          Dual B.S. Computer Science and Information Technology and Web Science
+        </div>
+      </section>
+      <section class="buttons">
         <div class="div_card" id="to_education">EDUCATION</div>
         <div class="div_card" id="to_experience">EXPERIENCES</div>
+        <div class="div_card" id="to_projects">PROJECTS</div>
         <div class="div_card" id="to_skills">SKILLS</div>
         <div class="div_card" id="to_awards">AWARDS</div>
+      </section>
+      <section class="education">
+        <h2>Education</h2>
+      </section>
+      <section class="experiences">
+        <h2>Experiences</h2>
+      </section>
+      <section class="projects">
+        <h2>Projects</h2>
+      </section>
+      <section class="skills">
+        <h2>Skills</h2>
+      </section>
+      <section class="awards">
+        <h2>Awards</h2>
+      </section>
     </div>
   </body>
 </html>
