--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
   <body>
     <div class="container">
       <section class="about">
-        <div class="heading">
+        <h1>About me</h1>
+        <!-- <div class="heading">
           <h1 id="name_heading">MRUNAL ATHALEY</h1>
           Sophomore at Rensselaer Polytechnic Institute<br>
           Dual B.S. Computer Science and Information Technology and Web Science
-        </div>
+        </div> -->
       </section>
       <section class="buttons">
-        <div class="div_card" id="to_education">EDUCATION</div>
+        <h1>Links</h1>
+        <!-- <div class="div_card" id="to_education">EDUCATION</div>
         <div class="div_card" id="to_experience">EXPERIENCES</div>
         <div class="div_card" id="to_projects">PROJECTS</div>
         <div class="div_card" id="to_skills">SKILLS</div>
-        <div class="div_card" id="to_awards">AWARDS</div>
+        <div class="div_card" id="to_awards">AWARDS</div> -->
       </section>
       <section class="education">
         <h2>Education</h2>
