working on the landing page

--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:400,700"
     />
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   </head>
   <body>
     <div class="container">
       <section class="about">
-        <h1>About me</h1>
         <br>
         <div class="heading">
-          <h1 id="name_heading">MRUNAL ATHALEY</h1>
-          Sophomore at Rensselaer Polytechnic Institute<br>
-          Dual B.S. Computer Science and Information Technology and Web Science
+          <h1 id="name_heading">MRUNAL<br>ATHALEY</h1>
+        </div>
+        <div class="head_description">
+          <p>Sophomore at Rensselaer Polytechnic Institute</p><br>
+          <p>Dual B.S. in Computer Science and Information <br>Technology and Web Science</p><br>
+        </div>
+        <div class="socials">
+          <ul class="socials_buttons_list">
+            <li><a href="mailto:athalm@rpi.edu">Email</a></li>
+            <li><a href="./resources/documents/MRUNAL ATHALEY.pdf" target="_blank">Resume</a></li>
+            <li><a href="https://www.linkedin.com/in/mrunal-athaley/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/athalm" target="_blank">GitHub</a></li>
+          </ul>
         </div>
       </section>
+
+
       <section class="buttons">
         <h1>Links</h1>
         <div class="div_card" id="to_education">EDUCATION</div>
