added image, and fixed css

--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
   <body>
     <div class="container">
       <section class="about">
-        <br>
-        <div class="heading">
-          <h1 id="name_heading">MRUNAL<br>ATHALEY</h1>
+        <div class="about_left">
+          <div class="heading">
+            <h1 id="name_heading">MRUNAL<br>ATHALEY</h1>
+          </div>
+          <div class="head_description">
+            <p>Sophomore at Rensselaer Polytechnic Institute</p><br>
+            <p>Dual B.S. in Computer Science and Information Technology and Web Science</p><br>
+          </div>
+          <div class="socials">
+            <ul class="socials_buttons_list">
+              <li><a href="mailto:athalm@rpi.edu">Email</a></li>
+              <li><a href="./resources/documents/MRUNAL ATHALEY.pdf" target="_blank">Resume</a></li>
+              <li><a href="https://www.linkedin.com/in/mrunal-athaley/" target="_blank">LinkedIn</a></li>
+              <li><a href="https://github.com/athalm" target="_blank">GitHub</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="head_description">
-          <p>Sophomore at Rensselaer Polytechnic Institute</p><br>
-          <p>Dual B.S. in Computer Science and Information <br>Technology and Web Science</p><br>
-        </div>
-        <div class="socials">
-          <ul class="socials_buttons_list">
-            <li><a href="mailto:athalm@rpi.edu">Email</a></li>
-            <li><a href="./resources/documents/MRUNAL ATHALEY.pdf" target="_blank">Resume</a></li>
-            <li><a href="https://www.linkedin.com/in/mrunal-athaley/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/athalm" target="_blank">GitHub</a></li>
-          </ul>
+        <div class="about_right">    
+          <img src="./resources/images/mrunal_home_page.jpg" id="mrunal_home_pg">
         </div>
       </section>
 
