starting on page 2!!

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <img src="./resources/images/mrunal_home_page.jpg" id="mrunal_home_pg">
         </div>
       </section>
-
+      <section class="hobbies">
+        Hello!
+      </section>
 
       <section class="buttons">
         <h1>Links</h1>
