--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mrunal Athaley</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- <script src="script.js"></script> -->
+    <script type="module">
+      import { neonCursor } from 'https://unpkg.com/threejs-toys@0.0.8/build/threejs-toys.module.cdn.min.js';
+      neonCursor({
+        el: document.getElementById('m_body'),
+        shaderPoints: 16,
+        curvePoints: 80,
+        curveLerp: 0.5,
+        radius1: 5,
+        radius2: 30,
+        velocityTreshold: 10,
+        sleepRadiusX: 100,
+        sleepRadiusY: 100,
+        sleepTimeCoefX: 0.0025,
+        sleepTimeCoefY: 0.0025
+    })
+    </script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:400,700"
     />
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   </head>
-  <body>
+  <body id="m_body">
     <div class="container">
       <section class="about">
         <div class="about_left">
