--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1 id="name_heading">MRUNAL<br>ATHALEY</h1>
           </div>
           <div class="head_description">
-            <p>Sophomore at Rensselaer Polytechnic Institute</p><br>
+            <p>Junior at Rensselaer Polytechnic Institute</p><br>
             <p>Dual B.S. in Computer Science and Information Technology and Web Science</p><br>
           </div>
           <div class="socials">
@@ -55,7 +55,7 @@
       <section class="hobbies">
         <div id="heading">Hello!</div>
         <div id="hobb_cont">
-          I'm Mrunal Athaley, I'm currently a sophomore at RPI, pursuing a dual major in Computer Science and Information Technology and Web Science. When I'm not puzzling over coding problems and algorithms, I love to explore new places. I'm also passionate about learning new languages. I can speak 3 languages fluently (English, Marathi, and Hindi) and have learned German for 7 years. Apart from that, I also enjoy drawing, playing the flute, cooking, and baking. This website is a platform where I share my experiences, projects, and interests with the world.
+          I'm Mrunal Athaley, I'm currently a junior at RPI, pursuing a dual major in Computer Science and Information Technology and Web Science. When I'm not puzzling over coding problems and algorithms, I love to explore new places. I'm also passionate about learning new languages. I can speak 3 languages fluently (English, Marathi, and Hindi) and have learned German for 7 years. Apart from that, I also enjoy drawing, playing the flute, cooking, and baking. This website is a platform where I share my experiences, projects, and interests with the world.
         </div>
       </section>
 
