--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init({
+            publicKey: "kkycr6R32XSZs6HQJ",
+          });
+      })();
+    </script>
 
 </head>
 <body id="m_body">
