--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
         </section>
 
         <!-- Contact Section -->
-        <section class="contact">
-          <h2>Contact Me!</h2>
-          <form id="contactForm">
+        <section class="contact_section">  
+          <br>        
+          <div class="contact">
+            <h2>Contact Me!</h2>
+            <form id="contactForm">
               <label for="name">Name:</label>
               <input type="text" id="name" name="name" required>
 
@@ -106,6 +108,7 @@
               <button type="submit">Send Message</button>
           </form>
           <div id="responseMessage"></div>
+          </div>          
       </section>
 
     </div>
