fixed about me content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
   </head>
   <body id="m_body">
-    <nav id="navbar">
+    <!-- <nav id="navbar">
       <div id="nav-icon" onclick="toggleNav()">☰</div>
       <div id="nav-menu">
         <a href="#home">Home</a>
@@ -38,7 +38,7 @@
         <a href="#experiences">Experiences</a>
         <a href="#contact">Contact</a>
       </div>
-    </nav>
+    </nav> -->
 
     <div class="container" id="app">
       <!-- Home Section -->
@@ -93,15 +93,13 @@
           <div class="slide biography">
             <h2>Biography</h2>
             <p>
-              I am Mrunal Athaley, a junior at Rensselaer Polytechnic Institute,
-              pursuing a dual B.S. in Computer Science and Information
-              Technology and Web Science. With a strong academic record and a
-              GPA of 3.89/4.00, I have been on the Dean's Honor List every
-              semester. My long-term interests lie in the realm of data in
-              healthcare, where I see immense potential for meaningful
-              contributions. I am also deeply passionate about AI and ML
-              concepts and look forward to engaging in projects related to these
-              areas in the future.
+              Hi! I'm Mrunal Athaley, a junior at Rensselaer Polytechnic
+              Institute, where I'm pursuing a dual B.S. in Computer Science and
+              Information Technology and Web Science. With a GPA of 3.89/4.00,
+              I've proudly made the Dean's Honor List every semester. My passion
+              lies in leveraging data to make a positive impact in healthcare,
+              and I'm deeply fascinated by AI and ML. I'm excited to dive into
+              projects that explore these innovative fields.
             </p>
           </div>
           <div class="slide education">
@@ -111,40 +109,51 @@
               - Dual B.S. in Computer Science and Information Technology and Web
               Science<br />
               - GPA: 3.89/4.00<br />
+              - Expected Graduation: December 2025<br />
               - Dean's Honor List every semester
             </p>
           </div>
           <div class="slide hobbies">
             <h2>Personal Life and Hobbies</h2>
             <p>
-              When I'm not immersed in my studies or working on projects, I
-              enjoy exploring new hobbies and interests. I am an avid reader,
-              particularly of science fiction and mystery novels. I also love
-              hiking and being in nature, which helps me relax and recharge.
-              Additionally, I have a passion for photography, capturing the
-              beauty of the world around me through my lens.
+              When I'm not buried in code or my textbooks, you can find me lost
+              in a science fiction or mystery novel. Got any recommendations?
+              I'm always on the lookout for my next great read. I love hiking
+              and soaking in the great outdoors, but to be honest, I'd probably
+              choose a cozy afternoon of cooking or baking over a hike. Trying
+              out new foods and experimenting in the kitchen is my kind of
+              adventure.
+            </p>
+            <p>
+              Traveling is another passion of mine. I've been lucky enough to
+              live in and visit several countries, and my travel bucket list has
+              Switzerland right at the top.
             </p>
           </div>
           <div class="slide story">
             <h2>My Story</h2>
             <p>
-              Growing up in Pune, India, I was always fascinated by technology
-              and its potential to solve real-world problems. My early exposure
-              to computers and programming set the foundation for my academic
-              and career pursuits. Over the years, I have had the opportunity to
-              work on diverse projects and internships that have broadened my
-              skill set and deepened my passion for software development.
+              Growing up in Pune, India, I was always the kid who was fascinated
+              by technology and its potential to solve real-world problems. My
+              early tinkering with computers and programming set the stage for
+              my academic and career journey. I've had the chance to work on a
+              variety of projects and internships that have broadened my skill
+              set and deepened my passion for software development, especially
+              backend work, although I've dabbled in frontend too.
             </p>
             <p>
-              One of my most memorable experiences was interning at Infosys,
-              where I led a team of interns to develop a movie ticketing
-              website, earning second place for our project. This experience
-              taught me the importance of teamwork, leadership, and innovative
-              thinking. It also reinforced my desire to create technology that
-              makes a difference in people's lives.
+              My love for math and science naturally led me to coding,
+              and a career in software seemed like the perfect fit. One of the
+              highlights of my journey was interning at Infosys, where I led a
+              team of interns to develop a movie ticketing website. We snagged
+              second place for our project, and the experience taught me
+              invaluable lessons in teamwork, leadership, and creative
+              problem-solving. It was a pivotal moment that reaffirmed my desire
+              to create technology that truly makes a difference.
             </p>
           </div>
         </div>
+
         <div class="arrow left" id="leftArrow">&#10094;</div>
         <div class="arrow right" id="rightArrow">&#10095;</div>
       </section>
