projects page updated

--- a/index.html
+++ b/index.html
@@ -165,31 +165,111 @@
           <div class="carousel">
             <div class="carousel-slide">
               <img
-                src="./resources/images/project1_logo.png"
+                src="./resources/images/labconnect_logo.png"
                 class="project-image"
-                alt="Project 1"
+                alt="LabConnect"
               />
               <div class="project-details">
-                <h3>Project 1</h3>
-                <p><strong>Role:</strong> Developer</p>
-                <p><strong>Duration:</strong> June 2023 - August 2023</p>
-                <p><strong>About:</strong> Description of Project 1...</p>
+                <h3>LabConnect</h3>
+                <p><strong>Role:</strong> Open Source Backend Developer</p>
+                <p><strong>Duration:</strong> Sep 2023 - Present</p>
+                <p>
+                  <strong>About:</strong> Developing and maintaining a centralized
+                  platform for posting and discovering campus lab and research
+                  opportunities using Python-Flask for backend and JavaScript for
+                  frontend components.
+                </p>
               </div>
             </div>
             <div class="carousel-slide">
               <img
-                src="./resources/images/heading_bg.png"
+                src="./resources/images/semweb_logo.png"
                 class="project-image"
-                alt="Project 2"
+                alt="Research in Knowledge Representation"
               />
               <div class="project-details">
-                <h3>Project 2</h3>
-                <p><strong>Role:</strong> Designer</p>
-                <p><strong>Duration:</strong> January 2023 - April 2023</p>
-                <p><strong>About:</strong> Description of Project 2...</p>
+                <h3>Research in Knowledge Representation</h3>
+                <p><strong>Role:</strong> Undergraduate Researcher</p>
+                <p><strong>Duration:</strong> Jan 2024 - May 2024</p>
+                <p>
+                  <strong>About:</strong> Producing and updating semantic data
+                  dictionaries for NHANES datasets. Exploring techniques for graph
+                  data and proposing an application for variable search over
+                  semantically described datasets.
+                </p>
               </div>
             </div>
-            <!-- Add more slides as needed -->
+            <div class="carousel-slide">
+              <img
+                src="./resources/images/rpievents_logo.png"
+                class="project-image"
+                alt="RPI Events"
+              />
+              <div class="project-details">
+                <h3>RPI Events</h3>
+                <p><strong>Role:</strong> Backend Developer</p>
+                <p><strong>Duration:</strong> Jan 2024 - Apr 2024</p>
+                <p>
+                  <strong>About:</strong> Developed a web application that
+                  consolidates all campus events into one platform. Provided a REST
+                  API for event viewing and handled backend development and all API
+                  endpoints.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img
+                src="./resources/images/planet_logo.png"
+                class="project-image"
+                alt="Planet"
+              />
+              <div class="project-details">
+                <h3>Planet</h3>
+                <p><strong>Role:</strong> Developer</p>
+                <p><strong>Duration:</strong> Sep 2023 - Dec 2023</p>
+                <p>
+                  <strong>About:</strong> Developed Planet, a task planning website
+                  for students to streamline deadline tracking for various
+                  assignments. Utilized HTML, CSS, JavaScript, PHP, and MySQL to build
+                  the platform.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img
+                src="./resources/images/speakeasy_logo.png"
+                class="project-image"
+                alt="SpeakEasy"
+              />
+              <div class="project-details">
+                <h3>SpeakEasy</h3>
+                <p><strong>Role:</strong> Developer</p>
+                <p><strong>Duration:</strong> Nov 2023</p>
+                <p>
+                  <strong>About:</strong> Created a fully working chatbot in 24 hours
+                  capable of transcribing speech to text and responding in a natural
+                  conversational style using Google Cloud and ChatGPT API. Developed
+                  the backend with Flask and connected the chatbot to a database.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img
+                src="./resources/images/rpicinema_logo.png"
+                class="project-image"
+                alt="RPI Cinema"
+              />
+              <div class="project-details">
+                <h3>RPI Cinema</h3>
+                <p><strong>Role:</strong> Developer</p>
+                <p><strong>Duration:</strong> Sep 2022 - Dec 2022</p>
+                <p>
+                  <strong>About:</strong> Developed a website for consolidating movie
+                  screening data on campus using HTML, CSS, JavaScript, PHP, and
+                  MySQL. Presented the project to classmates and the professor.
+                </p>
+              </div>
+            </div>
           </div>
           <div class="carousel-controls">
             <div class="carousel-arrow left-arrow">&#10094;</div>
@@ -199,7 +279,7 @@
             <!-- Indicators will be generated dynamically -->
           </div>
         </div>
-      </section>
+      </section>      
 
       <section class="experiences" id="experiences">
         <h2>Experiences</h2>
